src/scss/modules/table.scss
.table {
  flex: 1;
  display: flex;
  align-items: flex-start;
  overflow-x: auto;

  &__row {
    display: flex;
  }

  &__info {
    position: sticky;
    left: 0;
    touch-action: none;
    user-select: none;

    &:empty {
      box-shadow: inset 0 -2px 2px rgba(0, 0, 0, 0.5);
    }

    .table__resizer {
      left: calc(#{$size-cell-border} * -1);
      height: $size-resizer;
      cursor: row-resize;

      &::after {
        bottom: calc(#{$size-cell-border} * -1);
        width: calc(var(--table-width) * 1px);
        height: $size-resizer-extra;
      }
    }
  }

  &__info-empty {
    box-shadow: inset 0 -2px 2px rgba(0, 0, 0, 0.5);
  }

  &__data {
    display: flex;
  }

  &__cell {
    width: $width-cell;
    justify-content: flex-start;
  }

  &__head {
    position: relative;
    justify-content: center;
    background: $color-bg-column-head;

    .table__resizer {
      top: calc(#{$size-cell-border} * -1);
      width: $size-resizer;
      cursor: col-resize;

      &::after {
        right: calc(#{$size-cell-border} * -1);
        width: $size-resizer-extra;
        height: calc(var(--table-height) * 1px);
      }
    }
  }

  &__resizer {
    z-index: 1;
    position: absolute;
    right: calc(#{$size-cell-border} * -1);
    bottom: calc(#{$size-cell-border} * -1);
    opacity: 0;

    &::before {
      z-index: 1;
      position: absolute;
      inset: 0;
      background: $color-border-cell-active;
      content: '';
    }

    &::after {
      position: absolute;
      top: calc(#{$size-cell-border} * -1);
      left: calc(#{$size-cell-border} * -1);
      margin: auto;
      background: $color-resizer-extra;
      opacity: 0;
      pointer-events: none;
      content: '';
    }

    &:hover,
    &.is-active {
      opacity: 1;
    }

    &:active {
      &::after {
        opacity: 1;
      }
    }
  }
}

